--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,94 @@
 :root {
-    --background-black-opacity: rgb(0, 0, 0, 50%);
+  --background-black-opacity: rgb(0, 0, 0, 50%);
 }
 
 /* Общие стили*/
 
 a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
-a:hover{
-    opacity: .7;
+a:hover {
+  opacity: 0.7;
 }
 
 /* Header */
 
-.header{
-    position: relative;
-    height: 100vh;
-    background: url(../1659855080_7-kartinkin-net-p-temnii-fon-dlya-video-krasivo-7.jpg) no-repeat;
-    background-size: cover;
+.header {
+  position: relative;
+  height: 100vh;
+  background: url(../1659855080_7-kartinkin-net-p-temnii-fon-dlya-video-krasivo-7.jpg)
+    no-repeat;
+  background-size: cover;
 }
 
 .header__background {
-    position: absolute;
-    height: inherit;
-    width: 100%;
+  position: absolute;
+  height: inherit;
+  width: 100%;
 
-    background: rgb(0, 0, 0, .5);
+  background: rgb(0, 0, 0, 0.5);
 
-    z-index: 1;
+  z-index: 0;
 }
 
-.header-top{
-    color: #fff;
-    background: var(--background-black-opacity);
-    display: flex;
-    align-items: center     ;
-    justify-content: space-evenly;
-    height: 80px;
-    z-index: 2;
-    position: relative;
+.header-top {
+  color: #fff;
+  background: var(--background-black-opacity);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 80px;
+  z-index: 2;
+  position: relative;
 }
 
-.logo{
-    font-size: 36px;
-    margin-right: 40px;
+.logo {
+  font-size: 36px;
+  margin-right: 40px;
 }
 
-.menu{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu-element {
-    margin-right: 10px;
+  margin-right: 10px;
 
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .menu-element:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .header-center {
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
-    z-index: 2;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+  z-index: 2;
+  position: relative;
 }
 
 .header-center__wrapper {
-    width: 100%;
-    background: var(--background-black-opacity);
-    text-align: center;
-    padding: 20px 0;
+  width: 100%;
+  background: var(--background-black-opacity);
+  text-align: center;
+  padding: 20px 0;
 }
 
 .name {
-    font-size: 58px;
-    line-height: 74px;
+  font-size: 58px;
+  line-height: 74px;
 }
 
-.description
-{
-    font-size: 28px;
-    margin-left: 5px;
+.description {
+  font-size: 28px;
+  margin-left: 5px;
 }
